--- a/index.html
+++ b/index.html
@@ -2,11 +2,29 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Meu App OAuth</title>
+  <title>Planilha de Controle Financeiro</title>
 </head>
 <body>
-  <h1>Meu App OAuth</h1>
-  <p>Este aplicativo utiliza autenticação OAuth 2.0 para permitir login de usuários.</p>
-  <p>Aplicação criada para fins de teste e desenvolvimento.</p>
+  <h1>Planilha de Controle Financeiro Pessoal</h1>
+
+  <p>
+    Este aplicativo é uma planilha de controle de gastos pessoais desenvolvida
+    para uso individual. O acesso às funcionalidades é realizado por meio de um
+    script de automação integrado ao Google Sheets.
+  </p>
+
+  <p>
+    O aplicativo utiliza autenticação OAuth 2.0 do Google exclusivamente para
+    permitir o funcionamento correto das automações dentro da planilha do usuário.
+  </p>
+
+  <p>
+    Este é um produto comercial destinado a usuários individuais.
+  </p>
+
+  <p>
+    🔐 <a href="privacy.html">Acesse nossa Política de Privacidade</a>
+  </p>
+
 </body>
 </html>
