--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Planilha de Controle Financeiro</title>
+
+  <title>Raio-X Financeiro</title>
+
+  <meta name="google-site-verification" content="ZB6AhCU8Pva_RM4e2ZAI1rFi9nNOy81iflutuMLLMXk" />
 </head>
+
 <body>
-  <h1>Planilha de Controle Financeiro Pessoal</h1>
+  <h1>Raio-X Financeiro</h1>
 
   <p>
-    Este aplicativo é uma planilha de controle de gastos pessoais desenvolvida
+    Raio-X Financeiro é uma planilha de controle financeiro pessoal desenvolvida
     para uso individual. O acesso às funcionalidades é realizado por meio de um
     script de automação integrado ao Google Sheets.
   </p>
