--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <p>
     Raio-X Financeiro é uma planilha de controle financeiro pessoal desenvolvida
-    para uso individual. O acesso às funcionalidades é realizado por meio de um
+    para uso individual e será amplamente compartilhado para diversos usuários. O acesso às funcionalidades é realizado por meio de um
     script de automação integrado ao Google Sheets.
   </p>
 
