--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <h1>Propósito do Aplicativo: Raio-X Financeiro</h1>
+  <h1>Raio-X Financeiro</h1>
 
   <section>
     <h2>O que é o Raio-X Financeiro?</h2>
