--- a/index.html
+++ b/index.html
@@ -1,64 +1,129 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Raio-X Financeiro - Automação de Gestão Pessoal</title>
-  <meta name="google-site-verification" content="ZB6AhCU8Pva_RM4e2ZAI1rFi9nNOy81iflutuMLLMXk" />
-  <style>
-    body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 0 20px; color: #333; }
-    h1 { color: #2c3e50; }
-    h2 { color: #2980b9; border-bottom: 1px solid #eee; padding-bottom: 10px; }
-    .footer { margin-top: 50px; border-top: 1px solid #eee; padding-top: 20px; }
-    .escopo-box { background: #f9f9f9; padding: 15px; border-radius: 5px; margin: 10px 0; border-left: 5px solid #2980b9; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Raio-X Financeiro - Página Oficial do Aplicativo</title>
+    
+    <meta name="google-site-verification" content="ZB6AhCU8Pva_RM4e2ZAI1rFi9nNOy81iflutuMLLMXk" />
+
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        .container {
+            background-color: #fff;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        h1 { color: #0f9d58; border-bottom: 2px solid #0f9d58; padding-bottom: 10px; }
+        h2 { color: #424242; margin-top: 30px; }
+        h3 { color: #616161; font-size: 1.1em; margin-bottom: 5px; }
+        
+        .scope-container {
+            background-color: #e8f0fe;
+            border-left: 5px solid #4285f4;
+            padding: 15px;
+            margin-bottom: 20px;
+            border-radius: 4px;
+        }
+        .scope-url {
+            font-family: monospace;
+            background-color: #fff;
+            padding: 2px 5px;
+            border-radius: 3px;
+            font-weight: bold;
+            color: #d32f2f;
+        }
+        .highlight {
+            font-weight: bold;
+        }
+        .btn {
+            display: inline-block;
+            background-color: #4285f4;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+        .btn:hover { background-color: #3367d6; }
+        footer { margin-top: 50px; font-size: 0.9em; color: #777; border-top: 1px solid #ddd; padding-top: 20px; }
+    </style>
 </head>
-
 <body>
-  <h1>Raio-X Financeiro</h1>
 
-  <section>
-    <h2>O que é o Raio-X Financeiro?</h2>
-    <p>
-      O <strong>Raio-X Financeiro</strong> é uma solução de gestão financeira pessoal operada diretamente dentro do Google Sheets. 
-      Seu propósito é automatizar a organização de gastos, receitas e investimentos, transformando dados brutos em visões gráficas claras 
-      e painéis de controle práticos para o usuário final.
-    </p>
-  </section>
+    <div class="container">
+        <h1>Raio-X Financeiro</h1>
+        <p class="subtitle">Solução de Automação para Gestão Financeira no Google Sheets™</p>
 
-  <section>
-    <h2>Como as permissões são utilizadas?</h2>
-    <p>Para oferecer automação, o aplicativo solicita acesso a dois recursos específicos do Google, utilizados da seguinte forma:</p>
+        <section>
+            <h2>Sobre o Aplicativo</h2>
+            <p>
+                O <strong>Raio-X Financeiro</strong> é um script de automação (Add-on/Script) desenvolvido para operar exclusivamente dentro do ambiente do Google Sheets. 
+                Seu propósito principal é facilitar o controle financeiro pessoal através de formulários personalizados que padronizam a entrada de dados.
+            </p>
+            <p>
+                Diferente de softwares financeiros externos, o Raio-X Financeiro não armazena seus dados em servidores de terceiros. 
+                Ele atua como uma camada de interface entre o usuário e a própria planilha do usuário, garantindo privacidade total.
+            </p>
+            <h3>Principais Funcionalidades:</h3>
+            <ul>
+                <li>Registro automatizado de despesas, receitas e investimentos.</li>
+                <li>Geração de relatórios e dashboards visuais dentro da planilha.</li>
+                <li>Interfaces de formulário (pop-ups) para evitar erros de digitação manual nas células.</li>
+            </ul>
+        </section>
 
-    <div class="escopo-box">
-      <strong>1. Gerenciamento de Planilhas (.../auth/spreadsheets):</strong><br>
-      Utilizado para permitir que o script de automação escreva os dados que você insere nos formulários diretamente nas abas corretas da sua planilha 
-      (como 'Lançamentos' ou 'Categorias'). Sem isso, o preenchimento automático e o cálculo dos gráficos seriam impossíveis.
+        <hr>
+
+        <section>
+            <h2>Uso de Dados e Permissões (Escopos)</h2>
+            <p>Para fornecer as funcionalidades descritas, o aplicativo solicita as seguintes permissões específicas do Google, com as respectivas justificativas:</p>
+
+            <div class="scope-container">
+                <h3>1. Gerenciamento de Planilhas</h3>
+                <span class="scope-url">https://www.googleapis.com/auth/spreadsheets</span>
+                <p><strong>Por que precisamos disso:</strong> O script precisa dessa permissão para <em>escrever</em> os dados financeiros que você insere nos formulários diretamente nas células das abas "Despesas" e "Receitas". Também utilizamos para <em>ler</em> configurações salvas na aba "Configurações" para personalizar as categorias disponíveis.</p>
+            </div>
+
+            <div class="scope-container">
+                <h3>2. Interface de Usuário Externa</h3>
+                <span class="scope-url">https://www.googleapis.com/auth/script.container.ui</span>
+                <p><strong>Por que precisamos disso:</strong> Esta permissão é estritamente necessária para <em>exibir</em> as janelas modais (pop-ups) e a barra lateral personalizada onde os formulários de lançamento são apresentados. Sem isso, o usuário teria que digitar os dados manualmente nas células, perdendo a função de automação.</p>
+            </div>
+        </section>
+
+        <section>
+            <h2>Compromisso com a Privacidade</h2>
+            <p>
+                O Raio-X Financeiro adere à Política de Dados do Usuário dos Serviços de API do Google, incluindo os requisitos de uso limitado.
+            </p>
+            <ul>
+                <li><strong>Sem Transferência de Dados:</strong> O aplicativo não transfere dados da sua planilha para nenhum servidor externo.</li>
+                <li><strong>Processamento Local:</strong> Todo o processamento de cálculos ocorre dentro da infraestrutura da sua conta Google.</li>
+                <li><strong>Acesso Restrito:</strong> O desenvolvedor não tem acesso aos dados inseridos nas suas planilhas.</li>
+            </ul>
+        </section>
+
+        <footer>
+            <p>
+                <strong>Links Oficiais:</strong><br>
+                <a href="privacy.html" class="btn">Política de Privacidade</a>
+                <br><br>
+                <em>O uso deste aplicativo está sujeito aos <a href="privacy.html">Termos de Uso</a>. Google Sheets™ é uma marca comercial da Google LLC.</em>
+                <br>
+                Contato do Desenvolvedor: jgab.castro@gmail.com
+            </p>
+        </footer>
     </div>
-
-    <div class="escopo-box">
-      <strong>2. Interface de Usuário (.../auth/script.container.ui):</strong><br>
-      Utilizado exclusivamente para exibir janelas de formulários personalizados (pop-ups) dentro da sua planilha, facilitando a entrada de dados 
-      de forma estruturada e amigável.
-    </div>
-  </section>
-
-  <section>
-    <h2>Segurança e Transparência</h2>
-    <p>
-      Este aplicativo não transmite, armazena em servidores externos ou compartilha seus dados financeiros com terceiros. 
-      Toda a inteligência do script roda localmente na sua conta Google Drive e os dados permanecem exclusivamente dentro do seu arquivo pessoal.
-    </p>
-  </section>
-
-  <div class="footer">
-    <p>
-      🔗 <strong>Links Importantes:</strong><br>
-      <a href="https://jgabcastro-hue.github.io/meu-app-oauth/">Página Inicial Oficial</a> | 
-      <a href="https://jgabcastro-hue.github.io/meu-app-oauth/privacy.html">Política de Privacidade Detalhada</a>
-    </p>
-    <p><small>Contato do Desenvolvedor: jgab.castro@gmail.com</small></p>
-  </div>
 
 </body>
 </html>
