--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
         <section>
             <h2>Funcionalidade do Aplicativo</h2>
             <p>
-                O <strong>Raio-X Financeiro</strong> não é uma plataforma externa, mas sim um <em>Add-on</em> (complemento) de produtividade que roda integrado diretamente à planilha do Google Sheets do usuário. Ele transforma uma planilha em branco em um sistema robusto de gestão financeira através das seguintes funções:
+                O <strong>Raio-X Financeiro</strong> é um script de automação (Add-on/Script) desenvolvido para operar exclusivamente dentro do ambiente do Google Sheets. 
+                Seu propósito principal é facilitar o controle financeiro pessoal através de formulários personalizados que padronizam a entrada de dados através das seguintes funções:
             </p>
+            
 
             <div class="feature-box">
                 <div class="feature-title">✅ Interface de Entrada de Dados (Data Entry)</div>
