--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h2>Funcionalidade do Aplicativo</h2>
             <p>
                 O <strong>Raio-X Financeiro</strong> é um script de automação (Add-on/Script) desenvolvido para operar exclusivamente dentro do ambiente do Google Sheets. 
-                Seu propósito principal é facilitar o controle financeiro pessoal através de formulários personalizados que padronizam a entrada de dados através das seguintes funções:
+                Seu propósito principal é facilitar o controle financeiro pessoal através de formulários personalizados que padronizam a entrada de dados por meio das seguintes funções:
             </p>
             
 
