--- a/privacy.html
+++ b/privacy.html
@@ -56,7 +56,7 @@
         <h1>Política de Privacidade</h1>
         <p><strong>Última atualização:</strong> 12 de Janeiro de 2026</p>
         <p>
-            O <strong>Raio-X Financeiro</strong> ("nós", "nosso" ou "aplicativo") é um script de automação (Add-on) desenvolvido para operar integrado ao Google Sheets™. Esta Política de Privacidade descreve como coletamos, usamos e protegemos as informações ao utilizar nossa ferramenta.
+            O <strong>Raio-X Financeiro</strong> é um script de automação (Add-on) desenvolvido para operar integrado ao Google Sheets™. Esta Política de Privacidade descreve como coletamos, usamos e protegemos as informações ao utilizar nossa ferramenta.
         </p>
 
         <h2>1. Coleta e Uso de Dados</h2>
